--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /Clase01/AprendiendoJDBC/nbproject/private/
 /Clase01/AprendiendoJDBC/build/
+/Clase02/AprendiendoJDBC/build/
+/Clase02/AprendiendoJDBC/nbproject/private/
