--- a/clase4/EurekaCS/nbproject/project.properties
+++ b/clase4/EurekaCS/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=EurekaCS
+application.vendor=Alumno
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,12 +27,15 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/EurekaCS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.ojdbc6.jar=E:\\EGCC\\SW\\ojdbc6.jar
+file.reference.ojdbc6.jar=lib/ojdbc6.jar
+file.reference.poi-3.14-20160307.jar-1=lib\\poi-3.14-20160307.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.ojdbc6.jar}:\
+    ${file.reference.poi-3.14-20160307.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
